[package]
name = "extractdb"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["EthoIRL"]
repository = "https://github.com/EthoIRL/extractdb"
homepage = "https://github.com/EthoIRL/extractdb"
documentation = "https://docs.rs/extractdb"
readme = "README.md"
description = "Concurrent value-pull hash database"
keywords = ["concurrent", "hashset", "database"]
categories = ["database", "concurrency", "data-structures"]

[dependencies]
hashbrown = "0.15.4"
concurrent-queue = "2.5.0"
bitcode = "0.6.6"
rayon = "1.10.0"